@@ -18,7 +18,7 @@
 package org.apache.solr.cli;
 
 import java.io.PrintStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -77,7 +77,7 @@ public class StatusTool extends ToolBase {
     int maxWaitSecs = Integer.parseInt(cli.getOptionValue("maxWaitSecs", "0"));
     String solrUrl = cli.getOptionValue("solr", SolrCLI.getDefaultSolrUrl());
     if (maxWaitSecs > 0) {
-      int solrPort = (new URL(solrUrl)).getPort();
+      int solrPort = new URI(solrUrl).getPort();
       echo("Waiting up to " + maxWaitSecs + " seconds to see Solr running on port " + solrPort);
       try {
         waitToSeeSolrUp(solrUrl, maxWaitSecs, TimeUnit.SECONDS);
